--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>商城</title>
+    <script src="%PUBLIC_URL%/js/flexible.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
